tests/ui/function-contracts/trait_default_fn_err.expected
error: #[kani::requires] cannot be applied to trait function declarations without default bodies.\
       help: Apply this attribute to the implementation of the function instead.\
trait_default_fn_err.rs\
|\
|     #[kani::requires(true)]\
|     ^^^^^^^^^^^^^^^^^^^^^